--- a/.env
+++ b/.env
@@ -1,2 +1,10 @@
 NEXT_TELEMETRY_DISABLED=1
-NEXT_PUBLIC_AI_MODEL=claude-3-haiku-20240307
+ANTHROPIC_MODEL=claude-3-haiku-20240307
+FIRST_NAME=James
+
+# Set in `.env.development.local`
+# ANTHROPIC_AI_KEY=
+# PHONE_NUMBER=+1XXXXXXXXXX
+# TWILIO_ACCOUNT_SID=
+# TWILIO_AUTH_TOKEN=
+# TWILIO_PHONE_NUMBER=
