--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3001",
     "lint": "next lint"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^1.1.2",
+    "@tanstack/react-query": "4",
     "ai": "^4.1.5",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
@@ -17,6 +18,8 @@
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.15.1",
     "react-markdown": "^9.0.3",
+    "react-phone-number-input": "^3.4.11",
+    "twilio": "^5.4.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
