--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ NEXT_TELEMETRY_DISABLED=1
 ANTHROPIC_MODEL=claude-3-haiku-20240307
 FIRST_NAME=James
 
-# Set in `.env.development.local`
+# Set in `.env.local`
 # ANTHROPIC_AI_KEY=
 # PHONE_NUMBER=+1XXXXXXXXXX
 # TWILIO_ACCOUNT_SID=
